test/files/neg/t8763.check
t8763.scala:9: error: type mismatch;
 found   : Char
 required: String
    names_times(fields(0)) += fields(1).toLong
                      ^
1 error
